k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-production-service
spec:
  selector:
    app: k8s-production-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
