k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-production-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: k8s-production.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-production-service
                port:
                  number: 80
